[package]
name = "lanczos"
version = "0.2.0"
edition = "2021"
readme = "README.md"
authors = ["tomer <tomer.dmnt@gmail.com>"]
description = "lanczos algorithm for eigen decomposition"
categories = [ "science" ]
keywords = [ "linear-algebra", "eigen", "nalgebra", "nalgebra-sparse", "sparse"]
repository = "https://github.com/tomerdmnt/lanczos"
license = "MIT OR Apache-2.0"

[dependencies]
nalgebra = { version = "0.33.0", features = ["rand", "sparse"] }
nalgebra-sparse = "0.10.0"
num = "0.4.3"
